--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@colyseus/tools": "^0.15.0",
     "colyseus": "^0.15.0",
     "express": "^4.18.2",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "@babylonjs/havok": "^1.3.0",
+    "@babylonjs/core": "^6.42.0",
+    "@babylonjs/inspector": "^6.42.0"
   }
 }
