--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">= 16.13.0"
   },
   "scripts": {
+    "debug": "node --inspect --loader tsx src/index.ts",
     "start": "tsx watch src/index.ts",
     "build": "npm run clean && tsc",
     "clean": "rimraf build",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/saurabh-prosoft/tankme-server#readme",
   "devDependencies": {
+    "@babylonjs/loaders": "^6.44.0",
     "@colyseus/testing": "^0.15.0",
     "@types/express": "^4.17.1",
     "@types/mocha": "^10.0.1",
@@ -29,14 +31,14 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@babylonjs/core": "^6.42.0",
+    "@babylonjs/havok": "^1.3.0",
     "@colyseus/monitor": "^0.15.0",
     "@colyseus/playground": "^0.15.3",
     "@colyseus/tools": "^0.15.0",
     "colyseus": "^0.15.0",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
-    "@babylonjs/havok": "^1.3.0",
-    "@babylonjs/core": "^6.42.0",
-    "@babylonjs/inspector": "^6.42.0"
+    "xhr2": "^0.2.1"
   }
 }
