--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "canvas": "^2.11.2",
     "colyseus": "^0.15.0",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "firebase-admin": "^12.0.0",
     "xhr2": "^0.2.1"
   }
