--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@colyseus/testing": "^0.15.0",
     "@types/express": "^4.17.1",
     "@types/mocha": "^10.0.1",
+    "dotenv": "^16.4.5",
+    "firebase-admin": "^12.0.0",
     "mocha": "^10.2.0",
     "rimraf": "^5.0.0",
     "tsx": "^3.12.6",
@@ -40,7 +42,6 @@
     "colyseus": "^0.15.0",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
-    "firebase-admin": "^12.0.0",
     "xhr2": "^0.2.1"
   }
 }
