--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "scripts": {
     "debug": "node --inspect --loader tsx src/index.ts",
-    "start": "tsx watch src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "npm run clean && tsc",
+    "start": "tsx src/index.ts",
     "clean": "rimraf build",
     "test": "mocha -r tsx test/**_test.ts --exit --timeout 15000"
   },
@@ -21,18 +22,18 @@
   },
   "homepage": "https://github.com/saurabh-prosoft/tankme-server#readme",
   "devDependencies": {
-    "@babylonjs/loaders": "^6.44.0",
     "@colyseus/testing": "^0.15.0",
+    "mocha": "^10.2.0",
+    "rimraf": "^5.0.0"
+  },
+  "dependencies": {
     "@types/express": "^4.17.1",
     "@types/mocha": "^10.0.1",
     "dotenv": "^16.4.5",
-    "firebase-admin": "^12.0.0",
-    "mocha": "^10.2.0",
-    "rimraf": "^5.0.0",
     "tsx": "^3.12.6",
-    "typescript": "^5.0.4"
-  },
-  "dependencies": {
+    "typescript": "^5.0.4",
+    "firebase-admin": "^12.0.0",
+    "@babylonjs/loaders": "^6.44.0",
     "@babylonjs/core": "^6.42.0",
     "@babylonjs/havok": "^1.3.0",
     "@colyseus/monitor": "^0.15.0",
